@@ -366,19 +366,10 @@ Datum LWGEOM_exteriorring_polygon(PG_FUNCTION_ARGS)
 	// Ok, now we have a polygon. Here is its exterior ring.
 	extring = poly->rings[0];
 
+	// This is a LWLINE constructed by exterior ring POINTARRAY
 	// If the input geom has a bbox, use it for 
 	// the output geom, as exterior ring makes it up !
-	// COMPUTE_BBOX==WHEN_SIMPLE
-	if ( getbox2d_p(SERIALIZED_FORM(geom), &bbox) )
-	{
-		bbox2 = &bbox;
-	}
-
-	// This is a LWLINE constructed by exterior ring POINTARRAY
-	line = lwline_construct(poly->SRID, bbox2, extring);
-
-	// Copy SRID from polygon
-	line->SRID = poly->SRID;
+	line = lwline_construct(poly->SRID, poly->bbox, extring);
 
 	result = pglwgeom_serialize((LWGEOM *)line);
 
